<resources>
    <string name="app_name">HonestHerd</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about">About</string>
    <string name="view_my_map">view my map</string>
    <string name="feeling_not">I\'m not feeling well</string>
    <string name="not_feeling">not feeling well?</string>
    <string name="test_center">Test centers</string>
    <string name="delete_account">Delete account &amp; data</string>
    <string name="logout">logout</string>
    <string name="my_coins">My coins</string>
    <string name="terms_use">Terms of use</string>
    <string name="dummy">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</string>
    <string name="agree">Agree with Proceed</string>
    <string name="lets_beat">let\'s \n beat \n this \n together</string>
    <string name="please_sign">What do you say?</string>
    <string name="get_started">Get Started</string>
    <string name="data_policy">Our data policy</string>
    <string name="export_map">Export My Map</string>
    <string name="emergency_info">View Emergency Info</string>
    <string name="our_community">Our Community</string>
    <string name="view_centers">View Testing centers</string>

    <string name="share_world">Be the herd share the world</string>
    <string name="clipboard">Click to copy honestherd.com to your clipboard</string>
    <string name="assessment_tool">Self assessment tool</string>
    <string name="diagnosis_project">By the Human Diagnosis Project</string>
    <string name="export_my_path">Export my path trace </string>
    <string name="export_my_trace">Export my trace </string>
    <string name="xml_export">A 14 Day XML Export of Lat,Long and Time Stamp Will be Downloaded</string>
    <string name="near_test_center">view nearby test centers</string>
    <string name="coming_soon">Coming soon</string>
    <string name="privacy_seriously">Honest Herd takes privacy seriously</string>
    <string name="follow_twitter">Follow us on twitter</string>
    <string name="news_version">For the latest news and version releases</string>
    <string name="redeem_coins">Redeem Coins</string>
    <string name="betheherd">#Be\nthe\nherd</string>

    <string name="welcome">Welcome.</string>
    <string name="join_herd">Join the herd</string>
    <string name="privacy_policy">By proceeding further and clicking on JOINING THE HERD, you agree to our, </string>
    <string name="how_you_feel">How do you feel?</string>
    <string name="i_feel_well">I feel Well</string>
    <string name="i_feel_sick">I feel Sick</string>
    <string name="nextstep">Next\nSteps?</string>
    <string name="self_assessment">Self assessment</string>
    <string name="my_help_center">My help center</string>
    <string name="my_doctor">My doctor says i have</string>

    <string name="self_assessment_subtitle">A 5 min self assessment test by the team at HumanDX</string>
    <string name="my_help_center_subtitle">A local helping to heelp guide you through next steps</string>
    <string name="export_my_trace_subtitle">Export your last 14 day map trace for govt./medical professional</string>

    <string name="view_community_map">View community map</string>
    <string name="view_my_14_day">View my 14 day map trace</string>
    <string name="dont_feel_well">I dont feel well</string>
    <string name="delete_account_new">Delete Account</string>
    <string name="more_coins">Collect more coins to unlock</string>
    <string name="incentive_partner">Become incentive partner</string>
    <string name="privacy_terms">Privacy policy \u00A0 Terms of use</string>
    <!--    <string name="term_policy">"Test</string>-->
    <string name="term_policy"> &#8226; On Honest Herd you are an anonymous user. We do not collect any personal information.\n\n
• If you are well or unwell we do not share your share individual data with anyone.\n\n
• We may provide scientific and medical communities with anonymised community data for research.\n\n
• Any information is neither intended to be nor should be understood as medical opinion, advice or diagnosis of any condition.</string>

    <string name="bulleted_list">
        <ul>
        <li> On Honest Herd you are an anonymous user. We do not collect any personal information.<br /></li>\n
        <li> If you are well or unwell we do not share your share individual data with anyone.<br /></li>\n
        <li> We may provide scientific and medical communities with anonymised community data for research.<br /></li>
        </ul>
    </string>

    <string name="dot">&#8226;</string>
    <string name="privacy1">On Honest Herd you are an anonymous user. We do not collect any personal information.</string>
    <string name="privacy2">If you are well or unwell we do not share your share individual data with anyone.</string>
    <string name="privacy3">We may provide scientific and medical communities with anonymised community data for research.</string>
    <string name="byclicking">By clicking on the green check mark below, you agree to our:</string>


    <string name="pp_t">Privacy policy &amp; terms of use</string>
    <string name="english">English</string>
    <string name="hindi">हिन्दी (Coming soon)</string>
    <string name="chinese">中文 (Coming soon)</string>
    <string name="italian">Italiano (Coming soon)</string>
    <string name="french">Française (Coming soon)</string>

    <string name="covid19">covid19</string>
    <string name="influenza">influenza</string>
    <string name="none_above">none of the above</string>
    <string name="stayhome">Please stay \n at home </string>
    <string name="checkfewday">We will check on you in a few days</string>
    <string name="my_path_trace">My path trace </string>

</resources>
