<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HHActivity.HHTerms_activity"
    android:background="@drawable/background_image">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        app:srcCompat="@drawable/icon"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms_use"
        android:textSize="23sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:layout_margin="15dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dummy"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:layout_margin ="20dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_agree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textAllCaps="true"
        android:text="@string/agree"
        android:textSize="25sp"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:paddingEnd="70dp"
        android:paddingStart="70dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:background="@drawable/green_rectangle"/>

</LinearLayout>