<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:orientation="vertical"
        tools:context=".HHFregment.HHNextStepFragment">

        <!-- TODO: Update blank fragment layout -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_how_youfeel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginStart="20dp"
            android:text="@string/nextstep"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="35sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/border_rectangle"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:src="@drawable/assessment_icon"
                android:tint="@color/green_dark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_self_assessment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/self_assessment"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_self_assessment_subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:text="@string/self_assessment_subtitle"
                    android:textSize="10sp" />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/border_rectangle"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:src="@drawable/help_icon"
                android:tint="@color/green_dark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_my_help_center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_help_center"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_my_help_center_subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:text="@string/my_help_center_subtitle"
                    android:textSize="10sp" />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/border_rectangle"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:src="@drawable/export_icon"
                android:tint="@color/green_dark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_export_my_trace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/export_my_trace"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_export_my_trace_subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:text="@string/export_my_trace_subtitle"
                    android:textSize="10sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
