<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HHActivity.HHLogin_activity"
    android:background="@color/dark_color">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_icon_login"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="25dp"
        app:srcCompat="@drawable/app_icon_new"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:scaleType="center"
        android:background="@drawable/background_theme"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lets_beat"
        app:textAllCaps="true"
        android:textColor="@android:color/white"
        android:layout_gravity="center"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="80dp"
        android:textSize="60sp"
        android:layout_marginBottom="30dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>



    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_sign"
        android:layout_gravity="center"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/txt_im_in_login"
        android:visibility="gone"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_im_in_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_started"
        android:textSize="30sp"
        app:textAllCaps="true"
        android:paddingBottom="12dp"
        android:paddingTop="12dp"
        android:paddingEnd="70dp"
        android:paddingStart="70dp"
        android:background="@drawable/green_rectangle"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>